notify all admin users of a new order(and status change) by email & change order status directly from  email

--- a/config/locales/rails_admin.ru.yml
+++ b/config/locales/rails_admin.ru.yml
@@ -164,3 +164,10 @@ ru:
       slider:
         category_id: 'Ссылка на категорию'
         brand_id: 'Отфильтровать по брендам(опционально)'
+      order:
+        status: 'Статус'
+      order/status:
+        newly: 'Новый'
+        sent: 'Отправлен'
+        sold: 'Получена оплата'
+        returned: 'Возвращен'
